--- a/index.html
+++ b/index.html
@@ -14,130 +14,113 @@
 
   <div id="main">
   	<br>
-  	<div class="content-section-wide content-center">
-	  	<a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image"></a>
-	  	<a href="index.html"><img src="assets/images/buttons/astronaut.gif" class="header-image"></a>
-	    <h2>This is the personal and highly professional website of Dr. Ethan D. Jahn</h2>
-	    <p>Click the buttons below to see more. Click the title to return here.</p>
-    </div>
-
-    <div class="content-section-wide content-center">
-    	<br>
-    	<div class="button-grid">
-  			<a href="about.html">
-  				<div class="content-center randomColorButton" >
-        		<img src="assets/images/buttons/about.gif" width="180px">
-	        </div>
-	      </a>
-
-				<a href="why.html">
-					<div class="content-center randomColorButton" >
-						<img src="assets/images/buttons/why.gif" width="180px">
-					</div>
-				</a>
-
-				<a href="assets/documents/JahnCV2024.pdf">
-					<div class="content-center randomColorButton">
-						<img src="assets/images/buttons/CV.png" width="180px" alt="CV">
-					</div>
-				</a>
-
-				<div class="content-center">
-	      	<div class="headingText">Space Simulations Research</div>
-					<a href="simulations.html">
-						<div class="randomColorButton" data-hover-text="Space Simulations Research">
-							<img src="assets/images/buttons/galaxy.gif" width="160px">
-						</div></a>
-	      </div>
-
-	      <div class="content-center">
-	      	<div class="headingText">Teaching</div>
-  				<a href="teach.html">
-  					<div class="randomColorButton" data-hover-text="Teaching">
-        			<img src="assets/images/buttons/teacher.gif" width="160px">
-        		</div></a>
-	      </div>
-
-	      <div class="content-center">
-	      	<div class="headingText">Salon</div>
-  				<a href="salon.html">
-  					<div class="randomColorButton" data-hover-text="Salon">
-        			<img src="assets/images/buttons/book.gif" width="160px">
-        		</div></a>
-	      </div>
-
-	      <div class="content-center">
-  				<div class="headingText">Digital Art</div>
-  				<a href="art.html">
-  					<div class="randomColorButton"data-hover-text="Digital Art" >
-            	<img src="assets/images/buttons/colorspin.gif" width="150px">
-            </div></a>
-	      </div>
-
-	      <div class="content-center">
-  				<div class="headingText">Music</div>
-  				<a href="music.html">
-  					<div class="randomColorButton" data-hover-text="Music">
-            	<img src="assets/images/buttons/alienmusic.gif" width="210px">
-          	</div></a>
-	      </div>
-
-	      <div class="content-center">
-  				<div class="headingText">Film Photography</div>
-  				<a href="photos.html">
-  					<div class="randomColorButton" data-hover-text="Film Photography">
-            	<img src="assets/images/buttons/camera.gif" width="210px">
-            </div></a>
-	      </div>
-
-				<a href="coolstuff.html">
-					<div class="content-center randomColorButton" >
-      			<img src="assets/images/buttons/coollink.gif" width="210px">
-      		</div>
-      	</a>
-
-      	<div class="content-center">
-  				<div class="headingText">Science Communication</div>
-  				<a href="scicomm.html">
-  					<div class="randomColorButton" data-hover-text="Science Communication">
-            	<img src="assets/images/buttons/atom.gif" width="120px">
-            </div></a>
-	      </div>
-					
-      </div>
-      <br>
-      <br>
-    </div>
-  </div>
-
-  <div class="content-section">
-  	<div class="button-grid-footer">
-  		<a href="mailto:ejahn@arizona.edu"><div class="randomColorButton">
-	        <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
-	    </div></a>
-	    <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
-	        <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
-	    </div></a>
-	    <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
-          <img src="assets/images/buttons/github.gif" width="100px">
-      </div></a>
-  	</div>	  	
-  </div>
-
-  <footer id="footer">
-  	<div class="content-section content-center">
-  		<img src="assets/images/misc/G-animatedufo.gif" width=600px>
-	    <img src="https://i.imgur.com/i6hvJjx.gif">
-	    <p></p>
-	    <span><img src="https://i.imgur.com/QkBkUkC.gif"></span>
+  	<div class="content-center" style="margin: 20px">
+  		<span><a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image" style="max-width: 600px; height: auto; margin-right: 2em; margin-left: 2em"><img src="assets/images/buttons/astronaut.gif" class="header-image" style="max-width: 600px; height: auto; "> </a></span>
+  		<span class="heading-text"> 
+  			This is the personal and highly professional website of Dr. Ethan Jahn
+  		</span>
   	</div>
-    <div>
-    	<br>
-    	<br>
-    	<br>
-    	<br>
-    </div>
-  </footer>
+
+    <div class="content-section content-section-home button-grid" >
+		<a href="about.html"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/questionmark.gif" style="width: 50px;">
+		  <div style="margin-left: 4.0em; margin-top:0.5em;">
+	    <span style="font-size: 30px; font-weight:bold;">About</span>
+	    <p style="margin-top: -0.0em; font-size: 14px">Who am I? What is this website?</p>
+	    </div>
+		</div></a>
+
+		<a href="https://docs.google.com/document/d/1Unk8w48gD8D3D-GRhznjzEE3PcL7LgaCpJIe3CvcRIk/edit?usp=sharing"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/CV.png" style="width: 80px; margin-left: -0.5em">
+		  <div style="margin-left: 4.0em; margin-top:0.5em; margin-bottom:0.5em">
+	    <span style="font-size: 30px; font-weight:bold;">Curriculum Vitae</span>
+	    </div>
+		</div></a>
+
+		<a href="simulations.html"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/galaxy.gif" style="width: 70px;">
+		  <div style="margin-left: 4.0em; margin-top:0.5em; margin-bottom:0.5em">
+	    <span style="font-size: 24px; font-weight:bold;">Space Simulations Research</span>
+	    <p style="margin-top: -0.0em; font-size: 14px">Inquiries in galaxy formation</p>
+	    </div>
+		</div></a>
+
+		<a href="teach.html"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/teacher.gif" style="width: 70px;">
+		  <div style="margin-left: 4.0em; margin-top:0.5em; margin-bottom:0.5em">
+	    <span style="font-size: 30px; font-weight:bold;">Teaching</span>
+	    <p style="margin-top: -0.0em; font-size: 14px">My experience and pedagogy</p>
+	    </div>
+		</div></a>
+
+		<a href="scicomm.html"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/atom.gif" style="width: 70px;">
+		  <div style="margin-left: 4.0em; margin-top:0.5em; margin-bottom:0.5em">
+	    <span style="font-size: 24px; font-weight:bold;">Science Communication</span>
+	    <!-- <p style="margin-top: -0.0em; font-size: 16px">Translating science to the general public</p> -->
+	    </div>
+		</div></a>
+
+		<a href="salon.html"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/book.gif" style="width: 70px;">
+		  <div style="margin-left: 4.0em; margin-top:0.5em">
+	    <span style="font-size: 30px; font-weight:bold;">Salon</span>
+	    <p style="margin-top: -0.0em; font-size: 14px">An experiment in peer driven inquiry</p>
+	    </div>
+		</div></a>
+
+		<a href="art.html"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/colorspin.gif" style="width: 70px;">
+		  <div style="margin-left: 4.0em; margin-top:0.5em">
+	    <span style="font-size: 30px; font-weight:bold;">Digital Art</span>
+	    <!-- <p style="margin-top: -0.0em; font-size: 14px"></p> -->
+	    </div>
+		</div></a>
+
+		<a href="photos.html"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/camera.gif" style="width: 70px;">
+		  <div style="margin-left: 4.0em; margin-top:0.5em">
+	    <span style="font-size: 26px; font-weight:bold;">Film Photography</span>
+	    <!-- <p style="margin-top: -0.0em; font-size: 16px">Selected 35mm photos</p> -->
+	    </div>
+		</div></a>
+
+		<a href="music.html"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/alienmusic.gif" style="width: 70px;">
+		  <div style="margin-left: 4.0em; margin-top:0.5em">
+	    <span style="font-size: 30px; font-weight:bold;">Music</span>
+	    <p style="margin-top: -0.0em; font-size: 16px">My recording projects and bands</p>
+	    </div>
+		</div></a>
+
+		<a href="digitalgarden.html"><div class="randomColorButton homeButton">
+			<img src="assets/images/buttons/venus.gif" style="width: 70px;">
+		  <div style="margin-left: 4.0em; margin-top:0.5em">
+	    <span style="font-size: 30px; font-weight:bold;">Digital Garden</span>
+	    <p style="margin-top: -0.0em; font-size: 16px">Links and notes and things</p>
+	    </div>
+		</div></a>
+    </div>  
+  </div>
+
+  <div class="content-center">
+	<img src="assets/images/misc/G-animatedufo.gif" width=600px>
+	<img src="https://i.imgur.com/i6hvJjx.gif">
+	 <!-- <span><img src="https://i.imgur.com/QkBkUkC.gif"></span> -->
+  </div>
+
+  <div class="content-section content-center button-grid-footer" style="background-color: transparent;"> 
+	<a href="mailto:ejahn@arizona.edu"><div class="randomColorButton">
+        <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
+    </div></a>
+    <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
+        <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
+    </div></a>
+    <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
+        <img src="assets/images/buttons/github.gif" width="100px">
+    </div></a>
+  </div>
+
 </body>
 
 </html>
