--- a/music.html
+++ b/music.html
@@ -13,91 +13,58 @@
 <body>
   <div id="main">
   	<br>
-
-  	<div class="content-section-wide content-center">
-    	<a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image"></a>
-      <a href="index.html"><img src="assets/images/buttons/astronaut.gif" class="header-image"></a>
-      <h2>This is the personal and highly professional website of Dr. Ethan D. Jahn</h2>
+    <div class="content-center" style="margin: 20px">
+      <span><a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image" style="max-width: 600px; height: auto; margin-right: 2em; margin-left: 2em"><img src="assets/images/buttons/astronaut.gif" class="header-image" style="max-width: 600px; height: auto; "> </a></span>
+      <span class="heading-text"> 
+        This is the personal and highly professional website of Dr. Ethan Jahn
+      </span>
     </div>
 
     <div class="content-section">
-      <h2 id="working">Rock</h2>
+      <h1>Recording Projects</h1>
 
-      <h3>Singles</h3>
+      <h2>Soundcloud</h2>
+      <p style="margin-bottom: 20px;">There are a bunch more random tracks hosted over there <a href="https://soundcloud.com/xthnj">https://soundcloud.com/xthnj</a></p>
 
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834133499&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/grove" title="grove" target="_blank" style="color: #cccccc; text-decoration: none;">grove</a></div>
+      <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834133499&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/grove" title="grove" target="_blank" style="color: #cccccc; text-decoration: none;">grove</a></div>
+      
 
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834141833&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/moire" title="Moiré" target="_blank" style="color: #cccccc; text-decoration: none;">Moiré</a></div>
-
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834159101&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/radioboss" title="Radioboss" target="_blank" style="color: #cccccc; text-decoration: none;">Radioboss</a></div>
-
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834151727&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/i-cant-feel-my-face" title="i cant feel my face" target="_blank" style="color: #cccccc; text-decoration: none;">i cant feel my face</a></div>
-
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834109745&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/ghost-new-mix" title="Ghost (new Mix)" target="_blank" style="color: #cccccc; text-decoration: none;">Ghost (new Mix)</a></div>
-
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834157322&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/sundream" title="Sundream" target="_blank" style="color: #cccccc; text-decoration: none;">Sundream</a></div>
-
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/492117699&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/spirit-of-the-stairwell" title="Spirit Of The Stairwell" target="_blank" style="color: #cccccc; text-decoration: none;">Spirit Of The Stairwell</a></div>
-
-      <h3>Album: Untitled</h3>
+      <h2 style="margin-top:30px">Bandcamp</h2>
+      <p>different platform still me</p>
 
       <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=928947669/size=large/bgcol=181a1b/linkcol=056cc4/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://highfrqncynoise.bandcamp.com/album/untitled-tape-no-1">untitled tape no. 1 by High Frequency Noise</a></iframe>
       <br>
 
-      <h3>EP: Daybreak</h3>
       <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1372091528/size=large/bgcol=181a1b/linkcol=056cc4/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://highfrqncynoise.bandcamp.com/album/daybreak-ep">Daybreak EP by High Frequency Noise</a></iframe>
 
-    </div>
+      <h1 style="margin-top: 50px">Death By Saguaro</h1>
+      <p>I've also been playing synth and guitar in a Tucson-based psych-punk band called Death By Saguaro. I'll post pics and stuff here soon!</p>
 
-    <div class="content-section">
-      <h2 id="working">Electronic</h2>
+      <p>Here is a video of our first show:</p>
 
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834136907&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/iterate" title="iterate" target="_blank" style="color: #cccccc; text-decoration: none;">iterate</a></div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/56oq5Rd8dT4?si=_FmlYgaN8X4YukDa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834137873&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/mythos" title="mythos" target="_blank" style="color: #cccccc; text-decoration: none;">mythos</a></div>
-
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834168761&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/restrained" title="restrained" target="_blank" style="color: #cccccc; text-decoration: none;">restrained</a></div>
-
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834128720&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/memory-wave" title="Memory Wave" target="_blank" style="color: #cccccc; text-decoration: none;">Memory Wave</a></div>
-
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1834134780&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/nexus" title="nexus" target="_blank" style="color: #cccccc; text-decoration: none;">nexus</a></div>
-
-      <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1477001737&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/xthnj" title="ethan" target="_blank" style="color: #cccccc; text-decoration: none;">ethan</a> · <a href="https://soundcloud.com/xthnj/reflection-mp3" title="reflection.mp3" target="_blank" style="color: #cccccc; text-decoration: none;">reflection.mp3</a></div>
-
-      <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=1855356058/size=large/bgcol=181a1b/linkcol=056cc4/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://highfrqncynoise.bandcamp.com/track/stumble-zone">Stumble Zone by High Frequency Noise</a></iframe>
 
     </div>
-
   </div>
 
-  <div class="content-section">
-    <div class="button-grid-footer">
-      <a href="mailto:gelatinous.astronaut@gmail.com"><div class="randomColorButton">
-          <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
-      </div></a>
-      <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
-          <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
-      </div></a>
-      <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
-          <img src="assets/images/buttons/github.gif" width="100px">
-      </div></a>
-    </div>      
+  <div class="content-center">
+  <img src="assets/images/misc/G-animatedufo.gif" width=600px>
+  <img src="https://i.imgur.com/i6hvJjx.gif">
+   <!-- <span><img src="https://i.imgur.com/QkBkUkC.gif"></span> -->
   </div>
 
-  <footer id="footer">
-    <div class="content-section content-center">
-      <img src="assets/images/misc/G-animatedufo.gif" width=600px>
-      <img src="https://i.imgur.com/i6hvJjx.gif">
-      <p></p>
-      <span><img src="https://i.imgur.com/QkBkUkC.gif"></span>
-    </div>
-    <div>
-      <br>
-      <br>
-      <br>
-      <br>
-    </div>
-  </footer>
+  <div class="content-section content-center button-grid-footer" style="background-color: transparent;"> 
+  <a href="mailto:ejahn@arizona.edu"><div class="randomColorButton">
+        <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
+    </div></a>
+    <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
+        <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
+    </div></a>
+    <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
+        <img src="assets/images/buttons/github.gif" width="100px">
+    </div></a>
+  </div>
 </body>
 
 </html>
