--- a/salon.html
+++ b/salon.html
@@ -13,42 +13,49 @@
 <body>
 
   <div id="main">
-    <script src="assets/scripts/hover.js" defer></script>
     <br>
-    <div class="content-section-wide content-center">
-      <a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image"></a>
-      <a href="index.html"><img src="assets/images/buttons/astronaut.gif" class="header-image"></a>
-      <h2>This is the personal and highly professional website of Dr. Ethan D. Jahn</h2>
+    <div class="content-center" style="margin: 20px">
+      <span><a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image" style="max-width: 600px; height: auto; margin-right: 2em; margin-left: 2em"><img src="assets/images/buttons/astronaut.gif" class="header-image" style="max-width: 600px; height: auto; "> </a></span>
+      <span class="heading-text"> 
+        This is the personal and highly professional website of Dr. Ethan Jahn
+      </span>
     </div>
 
-  <div class="content-section">
-    <div class="button-grid-footer">
-      <a href="mailto:gelatinous.astronaut@gmail.com"><div class="randomColorButton">
-          <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
-      </div></a>
-      <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
-          <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
-      </div></a>
-      <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
-          <img src="assets/images/buttons/github.gif" width="100px">
-      </div></a>
-    </div>      
+    <div class="content-section">
+      <h2>Salon</h2>
+      Salon is a philosophy, science, and fiction reading group. We seek material that subverts traditional thinking and reframes beliefs that we take for granted. We are interested in questions of humanity, technology, expression, life, and more.
+
+      <h2>Reading List</h2>
+      This is an incomplete list of what we have read:
+      <ul>
+        <li><i>Self-Organized Criticality</i> - Per Bak</li>
+        <li><i>Meeting the Universe Halfway</i> - Karen Barad</li>
+        <li><i>Slanted Truths</i> - Lynn Margulis</li>
+        <li><i>The Truth of Fact, The Truth of Fiction</i> - Ted Chiang</li>
+        <li><i>Exhalation</i> - Ted Chiang</li>
+        <li><i></i></li>
+
+      <ul>
+    </div>
+    
+  <div class="content-center">
+    <br><br>
+    <img src="assets/images/misc/G-animatedufo.gif" width=600px>
+    <img src="https://i.imgur.com/i6hvJjx.gif">
+     <!-- <span><img src="https://i.imgur.com/QkBkUkC.gif"></span> -->
   </div>
 
-  <footer id="footer">
-    <div class="content-section content-center">
-      <img src="assets/images/misc/G-animatedufo.gif" width=600px>
-      <img src="https://i.imgur.com/i6hvJjx.gif">
-      <p></p>
-      <span><img src="https://i.imgur.com/QkBkUkC.gif"></span>
-    </div>
-    <div>
-      <br>
-      <br>
-      <br>
-      <br>
-    </div>
-  </footer>
+  <div class="content-section content-center button-grid-footer" style="background-color: transparent;"> 
+  <a href="mailto:ejahn@arizona.edu"><div class="randomColorButton">
+        <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
+    </div></a>
+    <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
+        <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
+    </div></a>
+    <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
+        <img src="assets/images/buttons/github.gif" width="100px">
+    </div></a>
+  </div>
 </body>
 
 </html>
