--- a/scicomm.html
+++ b/scicomm.html
@@ -13,23 +13,33 @@
 <body>
 
   <div id="main">
-  	<script src="assets/scripts/hover.js" defer></script>
   	<br>
-  	<div class="content-section-wide content-center">
-	  	<a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image"></a>
-	  	<a href="index.html"><img src="assets/images/buttons/astronaut.gif" class="header-image"></a>
-	    <h2>This is the personal and highly professional website of Dr. Ethan D. Jahn</h2>
-	    <p>Click the buttons below to see more. Click the title to return here.</p>
+    <div class="content-center" style="margin: 20px">
+      <span><a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image" style="max-width: 600px; height: auto; margin-right: 2em; margin-left: 2em"><img src="assets/images/buttons/astronaut.gif" class="header-image" style="max-width: 600px; height: auto; "> </a></span>
+      <span class="heading-text"> 
+        This is the personal and highly professional website of Dr. Ethan Jahn
+      </span>
     </div>
 
-    <div class="content-section">
-    	<h2>Science Communication Is Important!</h2>
-    	<p>I have participated in various public-facing science events throughout the years. Here are pics from some of them!</p>
-    </div>
+    <div class="content-section" style="margin-bottom: 30px;">
+    	<h1>Science Communication Is Important</h1>
 
-    <div class="content-section">
+      <h2>Let's collaborate!</h2>
+      <p>I'm interested in organizing public science talks here in Tucson Arizona. Drop a line if you're interested! <a href="mailto:ejahn@arizona.edu">ejahn@arizona.edu</a></p>
+
+      <h2>Previous Events</h2>
+    	<p>I have participated in various public-facing science events throughout the years. Here are some pics!</p>
+
     	<h3>October 2022 - Science Nights at Back to the Grind in Riverside</h3>
-    	<img src="assets/images/misc/spacetalk.jpeg" width="500px">
+      I gave a 1hr talk that included:
+      <ul>
+        <li>cool facts about our solar system</li>
+        <li>topics from cosmology including dark matter and inflation</li>
+      </ul> 
+
+      <a href="https://docs.google.com/presentation/d/1lBt0Ynr1wcBxLgppklM1mSHbCBBrn0dSy94_nAL2fqA/edit?usp=sharing">View the slides here!</a>
+
+    	<img src="assets/images/misc/spacetalk.jpeg" width="500px" style="margin-top:30px">
     	<br>
     	<h3>2018 - Explaining solar eclipses at an outreach event at UCR</h3>
     	<img src="assets/images/misc/outreach.jpg" width="500px">
@@ -38,34 +48,23 @@
 
   </div>
 
-  <div class="content-section">
-    <div class="button-grid-footer">
-      <a href="mailto:gelatinous.astronaut@gmail.com"><div class="randomColorButton">
-          <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
-      </div></a>
-      <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
-          <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
-      </div></a>
-      <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
-          <img src="assets/images/buttons/github.gif" width="100px">
-      </div></a>
-    </div>      
+  <div class="content-center">
+  <img src="assets/images/misc/G-animatedufo.gif" width=600px>
+  <img src="https://i.imgur.com/i6hvJjx.gif">
+   <!-- <span><img src="https://i.imgur.com/QkBkUkC.gif"></span> -->
   </div>
 
-  <footer id="footer">
-  	<div class="content-section content-center">
-  		<img src="assets/images/misc/G-animatedufo.gif" width=600px>
-	    <img src="https://i.imgur.com/i6hvJjx.gif">
-	    <p></p>
-	    <span><img src="https://i.imgur.com/QkBkUkC.gif"></span>
-  	</div>
-    <div>
-    	<br>
-    	<br>
-    	<br>
-    	<br>
-    </div>
-  </footer>
+  <div class="content-section content-center button-grid-footer" style="background-color: transparent;"> 
+  <a href="mailto:ejahn@arizona.edu"><div class="randomColorButton">
+        <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
+    </div></a>
+    <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
+        <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
+    </div></a>
+    <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
+        <img src="assets/images/buttons/github.gif" width="100px">
+    </div></a>
+  </div>
 </body>
 
 </html>
