--- a/teach.html
+++ b/teach.html
@@ -13,17 +13,26 @@
 <body>
   <div id="main">
   	<br>
-  	<div class="content-section-wide content-center">
-  	<a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image"></a>
-    <a href="index.html"><img src="assets/images/buttons/astronaut.gif" class="header-image"></a>
-
-    <h2>This is the personal and highly professional website of Dr. Ethan D. Jahn</h2>
+    <div class="content-center" style="margin: 20px">
+      <span><a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image" style="max-width: 600px; height: auto; margin-right: 2em; margin-left: 2em"><img src="assets/images/buttons/astronaut.gif" class="header-image" style="max-width: 600px; height: auto; "> </a></span>
+      <span class="heading-text"> 
+        This is the personal and highly professional website of Dr. Ethan Jahn
+      </span>
     </div>
 
     <div class="content-section">
       <div class="thin-paragraph">
-        <h2>Teaching</h2>
-        <p>During grad school I was a teaching assistant (TA) for many years. I mostly ran discussion sections which involved some lecturing, some improvisational question-and-answer sessions, and some guided activities, including group problem-solving. Here are the courses I TA'd for:</p>
+        <h1>Teaching</h1>
+
+        <h2>HPC Training</h2>
+        <p>I'm quite happy that teaching remained part of my responsibilities during my transition to research computing facilitation. I've taken the lead on organizing and expanding our workshop offerings, and have been thinking about how to better integrate computing education across disciplines.</p>
+
+        <h2>Community College</h2>
+        <p>After grad school I taught introductory calculus-based physics at a handful of different community colleges in SoCal, including Riverside City College, Mt. San Jacinto College, Mt. San Antonio College, and Crafton Hills College.</p>
+
+
+        <h2>Teaching Assistant (TA)</h2>
+        <p>During grad school I was a TA for about 4 years. I mostly ran discussion sections which involved some lecturing, some improvisational question-and-answer sessions, and some guided activities, including group problem-solving. Here are the courses I TA'd for:</p>
         <div class="centered-list">
           <ul>
             <li>General Electives</li>
@@ -62,34 +71,24 @@
 
   </div>
 
-  <div class="content-section">
-    <div class="button-grid-footer">
-      <a href="mailto:gelatinous.astronaut@gmail.com"><div class="randomColorButton">
-          <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
-      </div></a>
-      <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
-          <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
-      </div></a>
-      <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
-          <img src="assets/images/buttons/github.gif" width="100px">
-      </div></a>
-    </div>      
+  <div class="content-center">
+    <br><br>
+    <img src="assets/images/misc/G-animatedufo.gif" width=600px>
+    <img src="https://i.imgur.com/i6hvJjx.gif">
+     <!-- <span><img src="https://i.imgur.com/QkBkUkC.gif"></span> -->
   </div>
 
-  <footer id="footer">
-    <div class="content-section content-center">
-      <img src="assets/images/misc/G-animatedufo.gif" width=600px>
-      <img src="https://i.imgur.com/i6hvJjx.gif">
-      <p></p>
-      <span><img src="https://i.imgur.com/QkBkUkC.gif"></span>
-    </div>
-    <div>
-      <br>
-      <br>
-      <br>
-      <br>
-    </div>
-  </footer>
+  <div class="content-section content-center button-grid-footer" style="background-color: transparent;"> 
+  <a href="mailto:ejahn@arizona.edu"><div class="randomColorButton">
+        <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
+    </div></a>
+    <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
+        <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
+    </div></a>
+    <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
+        <img src="assets/images/buttons/github.gif" width="100px">
+    </div></a>
+  </div>
 </body>
 
 </html>
