--- a/photos.html
+++ b/photos.html
@@ -6,27 +6,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gelatinous Astronaut</title>
     <link rel="stylesheet" href="style.css">
-    <script src="assets/scripts/randombg.js" defer></script>
+    <!-- <script src="assets/scripts/randombg.js" defer></script> -->
     <script src="assets/scripts/hover.js" defer></script>
 </head>
 
-<body>
+<body style="background-color: rgb(30, 30, 30); color: white;">
   <div id="main">
   	<br>
-  	<div class="content-section-wide">
-  	<a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image"></a>
-    <a href="index.html"><img src="assets/images/buttons/astronaut.gif" class="header-image"></a>
-    <h2>This is the personal and highly professional website of Dr. Ethan D. Jahn</h2>
+    <div class="content-center" style="margin: 20px">
+      <span><a href="index.html"><img src="assets/images/buttons/gelatinous.gif" class="header-image" style="max-width: 600px; height: auto; margin-right: 2em; margin-left: 2em"><img src="assets/images/buttons/astronaut.gif" class="header-image" style="max-width: 600px; height: auto; "> </a></span>
+      <span class="heading-text"> 
+        This is the personal and highly professional website of Dr. Ethan Jahn
+      </span>
     </div>
 
-    <div class="content-section">
-        <div class="thin-paragraph">
-          <h2>My Film Photography</h2>
-          <p>All of the photos below were taken on 35mm film. Some on disposables, some on point-and-shoots, some on professional-grade SLRs with a variety of lens types. Can you guess which is which??</p>
-        </div>
+    <div style="padding: 60px; max-width:1000px">
+      <h2>My Film Photography</h2> 
     </div>
 
-    <div class="content-section-wide-dark">
+    <!-- <div class="content-section-wide-dark"> -->
+    <div class="content-section content-center" style="background-color:rgba(30, 30, 30, 1); max-width:none; width:90%; margin:10px">
       <div class="gallery">
       </div>
     </div>
@@ -47,34 +46,23 @@
 
   </div>
 
-  <div class="content-section">
-    <div class="button-grid-footer">
-      <a href="mailto:gelatinous.astronaut@gmail.com"><div class="randomColorButton">
-          <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
-      </div></a>
-      <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
-          <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
-      </div></a>
-      <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
-          <img src="assets/images/buttons/github.gif" width="100px">
-      </div></a>
-    </div>      
+  <div class="content-center">
+  <img src="assets/images/misc/G-animatedufo.gif" width=600px>
+  <img src="https://i.imgur.com/i6hvJjx.gif">
+   <!-- <span><img src="https://i.imgur.com/QkBkUkC.gif"></span> -->
   </div>
 
-  <footer id="footer">
-    <div class="content-section content-center">
-      <img src="assets/images/misc/G-animatedufo.gif" width=600px>
-      <img src="https://i.imgur.com/i6hvJjx.gif">
-      <p></p>
-      <span><img src="https://i.imgur.com/QkBkUkC.gif"></span>
-    </div>
-    <div>
-      <br>
-      <br>
-      <br>
-      <br>
-    </div>
-  </footer>
+  <div class="content-section content-center button-grid-footer" style="background-color: transparent;"> 
+  <a href="mailto:ejahn@arizona.edu"><div class="randomColorButton">
+        <img src="assets/images/buttons/E-MAIL-ME.gif" width="160px">
+    </div></a>
+    <a href="https://www.instagram.com/xthnj.wav/"><div class="randomColorButton">
+        <img src="assets/images/buttons/instagram-shiny.gif" width="160px">
+    </div></a>
+    <a href="https://github.com/gelatinous-astronaut/"><div class="randomColorButton">
+        <img src="assets/images/buttons/github.gif" width="100px">
+    </div></a>
+  </div>
 </body>
 
 </html>
